chore: add missing slices

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -124,6 +124,30 @@
         },
         "items": {}
       }
+    },
+    "ImagesSlider": {
+      "default-slice": {
+        "primary": {
+          "eyebrowHeadline": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
+      }
+    },
+    "TestimonialsSlider": {
+      "default-slice": {
+        "primary": {
+          "eyebrowHeadline": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
+            }
+          }
+        }
+      }
     }
   }
 }
